# ro-process-dashboard

./: .gitignore  .replit  Pasted-Exception-Error-creating-KPI-trends-Invalid-value-of-type-builtins-range-received-for-the-color-1730900911979.txt  RO_System_Sensors_Hourly_Report_May_to_October_2024 - RO_System_Sensors_Hourly_Report_May_to_October_2024 (2).csv  RO_system_data.csv  app.py  dashboard.py  data_to_use.csv  main.py  pyproject.toml  requirements.txt  ro-analysis-module.py  ro-dashboard-main.py  sensor_data_output - sensor_data_output.csv
assets/: style.css
data/: real_time_data.csv  sample_ro_data.csv
pages/: 01_Comparison_Analysis.py  1_Comparison_Analysis.py  1_ð¢_Site_Details.py  1_ð§_Site_Details.py  2_ð_Site_Comparison.py  comparison_analysis.py  kpi_analysis.py  site_details.py
templates/: index.html
utils/: data_processor.py  data_simulator.py  export_utils.py  predictive_maintenance.py  visualizations.py
