[project]
name = "repl-nix-roanalyticsdashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "plotly-express>=0.4.1",
    "streamlit-folium>=0.23.1",
    "streamlit>=1.39.0",
    "numpy",
]
