[project]
name = "repl-nix-roanalyticsdashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "plotly-express>=0.4.1",
    "streamlit-folium>=0.23.1",
    "numpy",
    "tensorflow",
    "seaborn",
    "dash",
    "prophet",
    "statsmodels",
    "scikit-learn",
    "reportlab",
    "dash-bootstrap-components>=1.6.0",
    "pytz>=2024.2",
    "streamlit==1.29.0",
]
